--- a/visitor/static/visitor/styles/main.css
+++ b/visitor/static/visitor/styles/main.css
@@ -4,13 +4,100 @@ body {
     font-family: 'Roboto';
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    width: 100%;
+    background-image: url("../img/bg9.jpg");
+    height: 100%;
+    background-position: center;
+    background-clip: border-box;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.body-container {
+#body-container {
     margin: 5%;
+    min-height: 100vh;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.nav-div nav {
+    background: #f0fdff;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    transition: all 0.4s ease;
+}
+
+.nav-div nav .sticky {
+    padding: 15px 20px;
+    background: #ffffff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.nav-div nav .nav-content {
+    height: 100%;
+    /* max-width: 1600px; */
+    margin: auto;
+    margin: 0 4%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-div nav .logo a {
+    font-weight: 500;
+    font-size: 35px;
+    color: #000000;
+}
+
+.nav-div nav.sticky .logo a {
+    color: #fff;
+}
+
+.nav-div .nav-content .nav-links {
+    display: flex;
+}
+
+.nav-div .nav-content .nav-links li {
+    list-style: none;
+    margin-right: 50px;
+}
+
+.nav-div .nav-links li a {
+    font-size: 20px;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.3s ease;
+    transition: text-shadow 0.3s ease;
+    background-image: linear-gradient(90deg, #000000 50%, #67dbff 50%);
+    background-size: 200%;
+    background-position: 0;
+    transition: background-position 0.3s ease;
+    background-clip: text;
+    color: transparent;
+}
+
+.nav-div .nav-links li a:hover {
+    border-bottom: 2px solid #67dbff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    background-position: -100%;
+}
+
+.nav-div nav.sticky .nav-links li a {
+    color: #9f9aff;
+    transition: all 0.4s ease;
+}
+
+.nav-div nav.sticky .nav-links li a:hover {
+    color: #ffffff;
 }
