--- a/visitor/static/visitor/styles/main.css
+++ b/visitor/static/visitor/styles/main.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 body {
     font-family: 'Roboto';
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    min-height: calc(100vh - 100px);
     width: 100%;
     background-image: url("../img/bg9.jpg");
     height: 100%;
@@ -16,8 +14,7 @@ body {
 }
 
 #body-container {
-    margin: 5%;
-    min-height: 100vh;
+    margin: 90px;
 }
 
 * {
