--- a/visitor/templates/visitor/layout.html
+++ b/visitor/templates/visitor/layout.html
@@ -1,13 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'visitor/styles/main.css' %}">
-    {% block style %}{% endblock style %}
     {% block css_link %}{% endblock css_link %}
+    {% block style %}{% endblock style %}
 </head>
 <body>
 
@@ -18,7 +18,7 @@
     <nav>
         <div class="nav-content">
             <div class="logo">
-            <a href="#">MediFlow</a>
+            <a href="/">MediFlow</a>
         </div>
         <ul class="nav-links">
             <li><a href="#" class="glow-on-hover">Home</a></li>
