--- a/visitor/templates/visitor/login.html
+++ b/visitor/templates/visitor/login.html
@@ -1,35 +1,38 @@
+{% extends "visitor/layout.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Login Portal</title>
-    <link rel="stylesheet" href="{% static 'visitor/styles/login.css' %}">
-</head>
-<body>
+
+    {% block title %}MediFlow Login{% endblock title %}
+    {% block css_link %}<link rel="stylesheet" href="{% static 'visitor/styles/login.css' %}" />{% endblock css_link %}
+    
+    {% block body %}
     <div class="login-container">
-        <header>
-            <img src="{% static 'visitor/svg\logo-no-background.svg' %}" alt="Hospital Logo" class="logo">
-            <h1>MediFlow Account</h1>
-        </header>
-        <form class="login-form" action="{% url 'visitor:login' %}" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required autocomplete="off">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-                <span class="toggle-password">Show</span>
-            </div>
-            <div class="message">{{message}}</div>
-            <button type="submit" class="login-btn">Login</button>
-            <a href="#" class="forgot-password">Forgot Password?</a>
-        </form>
+      <header>
+        <img src="{% static 'visitor/svg\logo-no-background.svg' %}" alt="Hospital Logo" class="logo" />
+        <h1>MediFlow Account</h1>
+      </header>
+      <form class="login-form" action="{% url 'visitor:login' %}" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" name="username" required autocomplete="off" />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required />
+          <span class="toggle-password">Show</span>
+        </div>
+        {% if message %}
+          <div class="message">{{ message }}</div>
+        {% endif %}
+        <div class="forgot-password-container">
+          <a href="#" class="forgot-password">Forgot Password?</a>
+        </div>
+        <button type="submit" class="login-btn">Login</button>
+      </form>
     </div>
+    {% endblock body %}
+
+    {% block script %}
     <script src="{% static 'visitor/js/login.js' %}"></script>
-</body>
-</html>
+    {% endblock script %}
